--- a/web/index.html
+++ b/web/index.html
@@ -62,27 +62,32 @@
   <link rel="manifest" href="manifest.json">
 
   <script>
-    // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = {{flutter_service_worker_version}};
+    // // The value below is injected by flutter build, do not touch.
+    // const serviceWorkerVersion = {{flutter_service_worker_version}};
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="flutter.js" defer></script>
+  <!-- <script src="flutter.js" defer></script> -->
 </head>
 <body>
   <script>
-    window.addEventListener('load', function(ev) {
-      // Download main.dart.js
-      _flutter.loader.loadEntrypoint({
-        serviceWorker: {
-          serviceWorkerVersion: serviceWorkerVersion,
-        },
-        onEntrypointLoaded: function(engineInitializer) {
-          engineInitializer.initializeEngine().then(function(appRunner) {
-            appRunner.runApp();
-          });
-        }
-      });
-    });
+   {{flutter_js}}
+{{flutter_build_config}}
+
+const loading = document.createElement('div');
+document.body.appendChild(loading);
+loading.textContent = "Loading...";
+ // The value below is injected by flutter build, do not touch.
+    const serviceWorkerVersion = {{flutter_service_worker_version}};
+_flutter.loader.load({
+  onEntrypointLoaded: async function(engineInitializer) {
+    loading.textContent = "Initializing $DINGO coin Engine...";
+    const appRunner = await engineInitializer.initializeEngine();
+
+    loading.textContent = "Running $DINGO Airdrop...";
+    await appRunner.runApp();
+  }
+});
+     
   </script>
 </body>
 </html>
