--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  
 <head>
     <title>Coin in DINGO</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
@@ -45,9 +46,9 @@
   <base href="$FLUTTER_BASE_HREF">
 
   <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="description" content="A new Flutter project.">
-
   <!-- iOS meta tags & icons -->
   <!-- <meta name="apple-mobile-web-app-capable" content="yes"> -->
   <meta name="mobile-web-app-capable" content="yes">
